working on type parsing

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,11 @@
 [workspace]
-members = [
+members = [ "packages/cli",
     "packages/tyyaml"
 ]
 resolver = "2"
 
 [workspace.dependencies.cu]
 package = "pistonite-cu"
-version = "0.5.0"
+version = "0.5.1"
+path = "../cu/packages/copper"
 
