--- a/packages/cli/config.toml
+++ b/packages/cli/config.toml
@@ -18,15 +18,26 @@ symbol-column = 1
 pointer-width = 64
 ptmd-repr = ["u64", 1]
 ptmf-repr = ["u64", 2]
+vfptr-field-regex = "^_vptr\\$"
+
+[extract.type-optimizer.pick-union-member]
+"uking::ui::PouchItem::Data" = "cook"
+"fpos_t" = "__opaque"
 
 [extract.name-resolution]
 rules = []
 test = []
 
+[extract.name-resolution.override]
+# de-templatize
+"^sead::OffsetList<.*>$" = "sead::OffsetList"
+"^sead::DelegateEvent<.*>$" = "sead::DelegateEvent"
+
 # [extract.type-optimizer.opaque-if]
-# name-is = [
-#     "std::__va_list"
+# name-matches = [
+#     "^std::__va_list$", 
 # ]
 # struct-member-name-contains = [
 #     "__clang"
 # ]
+
