--- a/packages/cli/Cargo.toml
+++ b/packages/cli/Cargo.toml
@@ -6,7 +6,7 @@ publish = false
 license = "MIT"
 
 [dependencies]
-cu = { workspace = true, features = ["cli", "process", "toml", "derive"] }
+cu = { workspace = true, features = ["cli", "process", "toml", "derive", "coroutine-heavy"] }
 elf = "0.8.0"
 fxhash = "0.2.1"
 gimli = "0.32.1"
