--- a/packages/cli/Cargo.toml
+++ b/packages/cli/Cargo.toml
@@ -21,7 +21,7 @@ spin = "0.10.0"
 tokio = "1"
 shell-words = "1.1.0"
 clang-ast = "0.1.33"
-dashmap = "6.1.0"
+dashmap = { version = "6.1.0", features = ["serde"] }
 
 [[bin]]
 name = "decompdb"
