--- a/packages/cli/Cargo.toml
+++ b/packages/cli/Cargo.toml
@@ -22,6 +22,7 @@ tokio = "1"
 shell-words = "1.1.0"
 clang-ast = "0.1.33"
 dashmap = { version = "6.1.0", features = ["serde"] }
+depfile = "0.1.1"
 
 [[bin]]
 name = "decompdb"
